<resources>
    <string name="app_name">PetComm</string>
    <string name="nav_home">홈</string>
    <string name="nav_device">기기</string>
    <string name="nav_mall">펫콤몰</string>
    <string name="nav_setting">설정</string>

    <string name="et_email">메일주소</string>
    <string name="et_name">이름</string>
    <string name="et_pw">비밀번호</string>
    <string name="et_pw2">비밀번호 재 입력</string>

    <!-- BUTTON -->
    <string name="bt_sign_in">로그인</string>
    <string name="bt_find_pw">비밀번호 찾기</string>
    <string name="bt_sign_up">회원가입</string>
    <string name="bt_register_dog">강아지 등록</string>
    <string name="bt_do_later">나중에 하기</string>
    <string name="bt_connect">연결하기</string>
    <string name="bt_choose_complete">선택 완료</string>
    <string name="bt_register_device">기기 등록</string>
    <string name="bt_register_complete">완료</string>
    <string name="bt_discover">discover</string>
    <string name="bt_register_feeder">급식기 등록</string>
    <string name="bt_register_toilet">배변키트 등록</string>

    <!-- 급식기 버튼 -->
    <string name="bt_setting_feeder">급식기 설정</string>
    <string name="tv_feeder_example">PC_F_UFWR4</string>
    <string name="bt_func_feeder_feed">수동 배식</string>
    <string name="bt_func_feeder_auto_feed">자동 배식 설정</string>
    <string name="bt_func_feeder_camera">카메라 확인</string>



    <!-- 배변키트1 버튼-->
    <string name="bt_setting_toilet">배변키트 설정</string>


    <!-- 다이얼로그 -->
    <string name="tv_dialog_title_example">Title</string>
    <string name="tv_dialog_button_ok">확인</string>
    <string name="tv_dialog_button_cancel">취소</string>



    <string name="bt_delete_data_all">모든 데이터 삭제하기</string>
    <string name="bt_sign_out">로그아웃</string>


    <string name="bt_go_add_device">기기 추가하러 가기</string>

    <string name="tv_auto_sin_in">자동 로그인</string>
    <string name="tv_id_is">ID :</string>
    <string name="tv_id_example">0</string>

    <string name="tv_name">이름</string>
    <string name="tv_name_is">이름 :</string>
    <string name="tv_name_example">-</string>
    <string name="tv_device_is">급식기 :</string>
    <string name="tv_device2_is">배변키트 :</string>
    <string name="tv_device_empty">등록된 기기가 없습니다.</string>
    <string name="tv_feeder_empty">등록된 급식기가 없습니다.</string>
    <string name="tv_toilet_empty">등록된 배변키트가 없습니다.</string>
    <string name="tv_device_example">petComm_FSBT4283</string>
    <string name="tv_device2_example">petComm_TWHJ8092</string>
    <string name="tv_device_test_example">===== WIFI Direct =====\n</string>
    <string name="tv_gender">성별</string>
    <string name="tv_gender_is">성별 :</string>
    <string name="tv_gender_male">남자아이</string>
    <string name="tv_gender_female">여자아이</string>
    <string name="tv_breeds">품종</string>
    <string name="tv_breeds_is">품종 :</string>
    <string name="tv_breeds_example">비숑</string>
    <string name="tv_birth">생일</string>
    <string name="tv_birth_is">생일 :</string>
    <string name="tv_birth_example">2015/11/14</string>
    <string name="tv_weight">무게</string>
    <string name="tv_weight_is">무게 :</string>
    <string name="tv_weight_is2">kg</string>
    <string name="tv_weight_example">3.14</string>

    <string name="tv_age">나이</string>
    <string name="tv_age_is">나이 :</string>
    <string name="tv_age_is2">살</string>
    <string name="tv_age_example">3</string>

    <string name="tv_example_breeds">품종을 선택해주세요</string>
    <string name="tv_example_birth">19XX년 0월 0일</string>
    <string name="tv_kg">kg</string>

    <string name="tv_feed_plan_for_today">오늘의 배식 계획</string>
    <string name="tv_feed_plan_example_1_time">8:00</string>
    <string name="tv_feed_plan_example_1_amount">100g</string>
    <string name="tv_feed_plan_example_1_status">완료</string>
    <string name="tv_feed_plan_example_2_time">12:00</string>
    <string name="tv_feed_plan_example_2_amount">120g</string>
    <string name="tv_feed_plan_example_2_status">계획</string>
    <string name="tv_feed_plan_example_3_time">19:00</string>
    <string name="tv_feed_plan_example_3_amount">120g</string>
    <string name="tv_feed_plan_example_3_status">계획</string>

    <string name="tv_device">DEVICE</string>
    <string name="tv_petcomm_doctor">펫콤 펫닥터</string>
    <string name="tv_petcomm_health_data">반려동물 건강 데이터</string>
    <string name="tv_petcomm_said_empty">등록된 기기가 없습니다.\n아래 기기 추가 버튼을 통해 주 기기를 등록해주세요.</string>
    <string name="tv_petcomm_said_example">초코는 3일간 규칙적인 식습관을 유지하고 있습니다.\n다만 체중이 지난 일주일간 증가하고 있어\n간식을 줄여주시는 것이 좋을 것 같습니다!</string>

    <string name="tv_recommend_empty">등록된 기기가 없어요..\n아래 기기 버튼을 통해 주 기기를 등록해주세요!</string>
    <string name="tv_recommend_initial">모인 데이터가 아직 부족해요 ㅠㅠ\n조금 더 사용하시면 데이터 분석을 해드릴게요!</string>
    <string name="tv_recommend_normal">최근 규칙적인 식습관을 유지하고 있습니다!\n이대로만 유지하면 훌륭해요!!</string>
    <string name="tv_recommend_fat">체중이 최근들어 많이 증가했어요..ㅠㅠ\n정기적인 산책은 반려동물의 건강에도, 기분에도 큰 도움이 됩니다!</string>
    <string name="tv_recommend_danger">식습관에 비해 체중이 너무 많이 증가했습니다.\n배에 복수가 찬 것일 수도 있으니 동물병원에 건강검진을 받아보는 것을 추천드립니다.</string>

    <string name="tv_empty_feeder">등록된 급식기가 없습니다.\n아래 버튼을 통해 기기를 추가해주세요.</string>
    <string name="tv_empty_toilet">등록된 배변키트가 없습니다.\n아래 버튼을 통해 기기를 추가해주세요.</string>
    <string name="tv_exist_feeder">자동 급식기 FWEIJF234</string>
    <string name="tv_exist_toilet">배변 키트 EOIJF2313</string>

    <string name="tv_language">Language</string>

    <string name="tv_empty_dog">강아지가 선택되지 않았습니다.</string>
    <string name="tv_unselected_dog">강아지를 선택해주세요.</string>
    <string name="tv_device_empty_total">선택된 강아지가 없습니다.\n\n등록한 강아지가 없다면\n홈 탭에서 강아지 등록 후 사용해주세요.\n\n기기는 강아지 당\n한 대 씩만 등록 가능합니다.</string>

    <string name="tv_recycler_header_time">배식 시간</string>
    <string name="tv_recycler_header_amount">배식 양</string>

    <string name="tv_schedule_empty">등록된 배식 스케줄이 없습니다.</string>

    <string name="tv_schedule_reset">스케줄 초기화</string>
    <string name="tv_schedule_check_proper_amount">몸무게별 적정량\n확인하러 가기!</string>

    <string name="tv_device_connect_explain1">1. Petcomm 기기 전면의 Bluetooth 버튼을\n5초 이상 누른 후 아래 리스트에서 "PETCOMM"이 생성되면\n선택 후 선택완료를 눌러주세요!</string>
    <string name="tv_device_connect_explain2">2. 설명서 뒷 면에 적힌 password를 입력하여\n기기와 연결을 진행해 주세요!</string>
    <string name="tv_device_connect_explain3">3. Petcomm 기기와 연결하고자 하는\nWifi의 이름과 패스워드를 입력해주세요.\n\nWifi는 2.4GHz환경이어야 합니다.</string>
    <string name="tv_device_connect_explain4_header">거의 다 끝났습니다!</string>
    <string name="tv_device_connect_explain4">4. Petcomm 서버와 통신하는 중입니다.\n잠시 후 완료 버튼을 눌러주세요!</string>

    <string name="desc_lang_kor">Language Korean</string>
    <string name="desc_icon">Icon PetComm</string>
    <string name="desc_splash">Splash Image</string>
    <string name="desc_device">Device Image</string>
    <string name="desc_divider">Divider</string>





</resources>
