<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DogProfileActivity">

    <data>

        <variable
            name="dogProfile"
            type="com.example.petcomm.DogProfileActivity" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <!-- 사진 -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="@dimen/length_image_profile"
            android:layout_height="@dimen/length_image_profile"
            android:layout_marginTop="15dp"

            android:src="@drawable/bichon"
            app:civ_border_color="@color/colorBlack"
            app:civ_border_width="1dp"
            app:civ_circle_background_color="@color/colorWhite"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <!-- id -->
        <LinearLayout
            android:id="@+id/ll_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_id_is"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/tv_id_example"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- 이름 -->
        <LinearLayout
            android:id="@+id/ll_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_id">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_name_is"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/tv_name_example"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />


        </LinearLayout>

        <!-- 성별 -->
        <LinearLayout
            android:id="@+id/ll_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_name">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_gender_is"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/tv_gender_male"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />


        </LinearLayout>

        <!-- 품종 -->
        <LinearLayout
            android:id="@+id/ll_breeds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_gender">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_breeds_is"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/tv_breeds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/tv_breeds_example"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />


        </LinearLayout>

        <!-- 생년월일 -->
        <LinearLayout
            android:id="@+id/ll_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_breeds">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_birth_is"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/tv_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/tv_birth_example"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />


        </LinearLayout>

        <!-- 무게 -->
        <LinearLayout
            android:id="@+id/ll_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_birth">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_weight_is"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/tv_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/tv_weight_example"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />


        </LinearLayout>


        <!-- 급식기 device1-->
        <LinearLayout
            android:id="@+id/ll_feeder_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_weight">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_device_is"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size"

                />

            <TextView
                android:id="@+id/tv_feeder_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/tv_device_example"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />


        </LinearLayout>

        <!-- 배변판 device2 -->
        <LinearLayout
            android:id="@+id/ll_toilet_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_feeder_id">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_device2_is"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size"

                />

            <TextView
                android:id="@+id/tv_toilet_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/tv_device_empty"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"

                />


        </LinearLayout>

        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_toilet_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:text="delete"
            android:onClick="@{dogProfile::deleteListener}"

            />


    </android.support.constraint.ConstraintLayout>

</layout>
