<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignUpActivity"
    >

    <data>
        <variable
            name="signUp"
            type="com.example.petcomm.SignUpActivity"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:background="@color/colorWhite"
        >

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/desc_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_petcomm2" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="@dimen/length_image_profile"
            android:layout_height="@dimen/length_image_profile"
            android:layout_marginTop="20dp"
            app:civ_border_width="3dp"
            app:civ_border_color="@color/colorBlack"
            app:civ_circle_background_color="@color/colorWhite"
            android:src="@drawable/ic_person_add_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_icon"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text"
            android:layout_marginTop="20dp"
            android:hint="@string/et_email"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:met_floatingLabel="highlight" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text"
            android:hint="@string/et_name"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size"
            app:layout_constraintTop_toBottomOf="@+id/et_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:met_floatingLabel="highlight" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_pw"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text"
            android:hint="@string/et_pw"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/et_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:met_floatingLabel="highlight"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_pw2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text"
            android:hint="@string/et_pw2"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/et_pw"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:met_floatingLabel="highlight" />

        <Button
            android:id="@+id/bt_sign_in"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button"
            android:layout_marginBottom="20dp"

            android:text="@string/bt_sign_up"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:background="@drawable/layout_rounded_primary"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            android:onClick="@{signUp::submitButtonListener}"

            />





    </android.support.constraint.ConstraintLayout>
</layout>