<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddDogActivity"
    >

    <data>
        <variable
            name="signUpDog"
            type="com.example.petcomm.AddDogActivity"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:background="@color/colorWhite"
            android:paddingBottom="50dp"
            >

            <ImageView
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:id="@+id/iv_icon"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/desc_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_petcomm2" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile"
                android:layout_width="@dimen/length_image_profile"
                android:layout_height="@dimen/length_image_profile"
                android:layout_marginTop="30dp"
                app:civ_border_width="3dp"
                app:civ_border_color="@color/colorBlack"
                app:civ_circle_background_color="@color/colorWhite"
                android:src="@drawable/ic_dog_plus"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_icon"
                app:layout_constraintEnd_toEndOf="parent"
                />


            <LinearLayout
                android:id="@+id/ll_name"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_edit_text"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/iv_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/tv_name"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/colorBlack"

                    />



                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_edit_text"
                    android:layout_marginStart="@dimen/margin_sign_up_dog"

                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size"
                    app:layout_constraintStart_toEndOf="@+id/tv_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:met_floatingLabel="normal" />

            </LinearLayout>



            <LinearLayout
                android:id="@+id/ll_gender"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_edit_text"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/ll_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/tv_gender"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/colorBlack"

                    />

                <RadioGroup
                    android:id="@+id/rg_gender"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="@dimen/margin_sign_up_dog"

                    >
                    <RadioButton
                        android:id="@+id/rb_male"
                        android:text="@string/tv_gender_male"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        />
                    <RadioButton
                        android:id="@+id/rb_female"
                        android:text="@string/tv_gender_female"
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        />
                </RadioGroup>



            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_breeds"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_edit_text"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/ll_gender"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/tv_breeds"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/colorBlack"

                    />

                <TextView
                    android:id="@+id/tv_breeds"
                    android:layout_marginStart="@dimen/margin_sign_up_dog"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:hint="@string/tv_example_breeds"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size"

                    android:onClick="@{signUpDog::selectBreedsListener}"

                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_birth"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_edit_text"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/ll_breeds"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/tv_birth"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/colorBlack"


                    />

                <TextView
                    android:id="@+id/tv_birth"
                    android:layout_marginStart="@dimen/margin_sign_up_dog"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:hint="@string/tv_example_birth"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/colorBlack"
                    android:onClick="@{signUpDog::selectBirthListener}"


                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_weight"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_edit_text"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/ll_birth"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/tv_weight"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/colorBlack"


                    />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_weight"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_edit_text"
                    android:layout_marginStart="@dimen/margin_sign_up_dog"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:inputType="numberDecimal"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size"
                    app:met_floatingLabel="normal" />


                <TextView
                    android:id="@+id/tv_kg"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/tv_kg"
                    android:gravity="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="30dp"

                    />


            </LinearLayout>


            <Button
                android:id="@+id/bt_sign_in"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_button"
                android:layout_marginTop="50dp"

                android:text="@string/bt_register_dog"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:background="@drawable/layout_rounded_primary"

                app:layout_constraintTop_toBottomOf="@+id/ll_weight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:onClick="@{signUpDog::submitButtonListener}"
                />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</layout>